--- a/java/ui/nbproject/private/private.properties
+++ b/java/ui/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/root/.netbeans/8.0.1/build.properties
+user.properties.file=/home/webmaster/.netbeans/8.1/build.properties
